Version 1.9.9, in progress
- Add --cluster option (cluster-robust standard errors) for several
  estimators; see the User's Guide for details
- Add (limited) support for Stata under the "foreign" command
- New accessor $ylist: returns the list of endogenous variables from
  the last system or model estimated
- "fcast" command: enable for multinomial logit models
- "graphpg" command: enable printing from script
- Fix encoding for Polish translation
- Fix bug 3525304
- Fix bug: in logging commands entered via the gretl console, options
  were being omitted
- Fix behavior of Ctrl-A in non-editable text windows
- Fix breakage of GUI Alt-x command "minibuffer"
- "modtest" command with --normality option: make the accessors $test
  and $pvalue work when the test is done on a VAR
- Fix bug: arima initialization could interfere with formation of
  named lists
- Fix bug: nonlinearity test (logs) misbehaving when the original
  model includes non-positive regressors
- Improvements to syntax highlighting in script editor 
- Numerous small GUI fixes
- MS Windows build: update cross-compiler to gcc-4.6.3
- MS Windows build: fix inconsistent zlib headers
- Internals: clean up the Minpack sources that we use for nls

2012-03-29 version 1.9.8
- GUI: support use of named lists in the model specification dialog and
  other contexts
- GUI: add option of making the script editor and the model viewer
  windows use tabs
- GUI: add "reformat" option to summary statistics window for single
  series
- GUI: add keyboard shortcut help file
- Add a new practice script illustrating advanced use of mle command,
  and extend the discussion of mle in the User's Guide
- New function pxsum(): computes the cross-sectional sum of a series in
  the context of panel data
- stack() function for panel data: allow '*' in forming list of series
- Compaction of daily to weekly data: enable this even if the daily data
  are not dated
- "panel" command: add --nerlove option to use Nerlove's transformation